--- a/.env_example
+++ b/.env_example
@@ -7,7 +7,7 @@ SERVER_PORT=8004
 CLIENT_DEVSERVER_PORT=8006
 
 # Disable SSR?
-DISABLE_SSR=true
+DISABLE_SSR=false
 
 # The title for the website
 WEBSITE_TITLE=React Universally
