Fixes package.json

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-universally",
   "version": "0.0.1",
-  "description": "A "when size matters" adaptation of the react-universally boilerplate.",
+  "description": "A \"when size matters\" adaptation of the react-universally boilerplate.",
   "main": "build/server/main.js",
   "engines": {
     "node": "~6.3.0"
