--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "helmet": "2.1.1",
     "hpp": "0.2.1",
     "preact": "5.4.0",
-    "preact-compat": "git+https://github.com/ctrlplusb/preact-compat.git#2.0.1_release-waiting",
+    "preact-compat": "2.2.0",
     "react-router": "3.0.0-alpha.2",
     "serialize-javascript": "1.3.0",
     "source-map-support": "0.4.2"
