--- a/package.json
+++ b/package.json
@@ -45,10 +45,10 @@
   "devDependencies": {
     "assets-webpack-plugin": "3.4.0",
     "babel-cli": "6.11.4",
-    "babel-core": "6.11.4",
+    "babel-core": "6.13.2",
     "babel-eslint": "6.1.2",
     "babel-loader": "6.2.4",
-    "babel-preset-es2015-webpack": "6.4.2",
+    "babel-preset-es2015": "6.13.2",
     "babel-preset-react": "6.11.1",
     "chokidar": "1.6.0",
     "css-loader": "0.23.1",
