--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "path": "0.12.7",
     "preact": "5.6.0",
     "preact-compat": "2.3.0",
+    "react-helmet": "3.1.0",
     "react-router": "3.0.0-alpha.2",
     "serialize-javascript": "1.3.0",
     "source-map-support": "0.4.2",
