Updates to match changes from react-universally 3.0.0

--- a/.env_example
+++ b/.env_example
@@ -1,10 +1,30 @@
-# NOTE: Any keys added here must also be added to the DefinePlugin in the webpackConfigFactory
+# This is an example environment configuration file.  You can create your own
+# .env implementation or even just set these values directly on the environment
+# via your CI server for example.
+
+# NOTE!
+# Any keys added here must also be added to the DefinePlugin in the
+# webpackConfigFactory as we bundle both the client and server source with the
+# environment variables baked in.
 
 # The port on which to run our server.
-SERVER_PORT=8004
+SERVER_PORT=1337
 
 # The port on which to run our client bundle dev server.
-CLIENT_DEVSERVER_PORT=8006
+CLIENT_DEVSERVER_PORT=7331
 
 # Disable SSR?
 DISABLE_SSR=false
+
+# Where should we output our server bundle? (relative to project root)
+SERVER_BUNDLE_OUTPUT_PATH=./build/server
+
+# Where should we output our client bundle? (relative to project root)
+CLIENT_BUNDLE_OUTPUT_PATH=./build/client
+
+# What should we name the file that contains details of all the files contained
+# within our client bundle?
+CLIENT_BUNDLE_ASSETS_FILENAME=assets.json
+
+# What is the public http path at which we will serve our client bundle from?
+CLIENT_BUNDLE_HTTP_PATH=/client-assets/
