--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-universally-skinny",
-  "version": "2.0.0",
+  "version": "3.0.0",
   "description": "A \"when size matters\" adaptation of the react-universally boilerplate.",
   "main": "build/server/main.js",
   "engines": {
@@ -9,8 +9,8 @@
   "scripts": {
     "lint": "eslint src",
     "clean": "rimraf build",
-    "development": "node ./devServer",
-    "build": "npm run clean && webpack --env.mode production --config webpack.client.config.js && webpack --env.mode production --config webpack.server.config.js",
+    "development": "node ./tools/development/server",
+    "build": "npm run clean && webpack --env.mode production --config ./tools/webpack/client.config.js && webpack --env.mode production --config ./tools/webpack/server.config.js",
     "start": "node build/server/main.js"
   },
   "repository": {
@@ -32,11 +32,9 @@
   },
   "homepage": "https://github.com/ctrlplusb/react-universally#readme",
   "dependencies": {
-    "assets-webpack-plugin": "3.4.0",
+    "app-root-path": "1.3.0",
     "compression": "1.6.2",
-    "dotenv": "2.0.0",
     "express": "4.14.0",
-    "extract-text-webpack-plugin": "2.0.0-beta.3",
     "helmet": "2.1.2",
     "hpp": "0.2.1",
     "normalize.css": "4.2.0",
@@ -46,11 +44,10 @@
     "react-helmet": "3.1.0",
     "react-router": "3.0.0-alpha.3",
     "serialize-javascript": "1.3.0",
-    "source-map-support": "0.4.2",
-    "webpack": "2.1.0-beta.20",
-    "webpack-node-externals": "1.3.3"
+    "source-map-support": "0.4.2"
   },
   "devDependencies": {
+    "assets-webpack-plugin": "3.4.0",
     "babel-cli": "6.11.4",
     "babel-core": "6.13.2",
     "babel-eslint": "6.1.2",
@@ -58,12 +55,14 @@
     "babel-preset-es2015": "6.13.2",
     "babel-preset-react": "6.11.1",
     "chokidar": "1.6.0",
+    "dotenv": "2.0.0",
     "css-loader": "0.23.1",
     "eslint": "3.2.2",
     "eslint-config-airbnb": "10.0.0",
     "eslint-plugin-import": "1.12.0",
     "eslint-plugin-jsx-a11y": "2.0.1",
     "eslint-plugin-react": "6.0.0",
+    "extract-text-webpack-plugin": "2.0.0-beta.3",
     "fake-style-loader": "1.0.1",
     "file-loader": "0.9.0",
     "json-loader": "0.5.4",
@@ -71,7 +70,9 @@
     "rimraf": "2.5.4",
     "style-loader": "0.13.1",
     "url-loader": "0.5.7",
+    "webpack": "2.1.0-beta.20",
     "webpack-dev-middleware": "1.6.1",
-    "webpack-hot-middleware": "2.12.2"
+    "webpack-hot-middleware": "2.12.2",
+    "webpack-node-externals": "1.3.3"
   }
 }
