--- a/.env_example
+++ b/.env_example
@@ -28,3 +28,10 @@ CLIENT_BUNDLE_ASSETS_FILENAME=assets.json
 
 # What is the public http path at which we will serve our client bundle from?
 CLIENT_BUNDLE_HTTP_PATH=/client-assets/
+
+# How long should we set the browser cache for the client bundle assets?  Don't
+# worry, we add hashes to the files, so if they change the new files will be
+# served to browsers.
+# We are using the "ms" format to set the length.
+# @see https://www.npmjs.com/package/ms
+CLIENT_BUNDLE_CACHE_MAXAGE=365d
