--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-universally-skinny",
-  "version": "3.0.0",
-  "description": "A \"when size matters\" adaptation of the react-universally boilerplate.",
+  "version": "3.1.0",
+  "description": "A \"when size matters\" adaptation of the react-universally starter kit.",
   "main": "build/server/main.js",
   "engines": {
     "node": "~6.3.1"
@@ -19,7 +19,9 @@
   },
   "keywords": [
     "react",
+    "preact",
     "boilerplate",
+    "starter kit",
     "universal",
     "javascript",
     "express",
@@ -52,19 +54,22 @@
     "babel-core": "6.13.2",
     "babel-eslint": "6.1.2",
     "babel-loader": "6.2.4",
+    "babel-plugin-transform-class-properties": "6.11.5",
+    "babel-plugin-transform-object-rest-spread": "6.8.0",
     "babel-preset-es2015": "6.13.2",
     "babel-preset-react": "6.11.1",
     "chokidar": "1.6.0",
-    "dotenv": "2.0.0",
     "css-loader": "0.23.1",
+    "dotenv": "2.0.0",
     "eslint": "3.2.2",
     "eslint-config-airbnb": "10.0.0",
+    "eslint-plugin-flow-vars": "0.5.0",
     "eslint-plugin-import": "1.12.0",
     "eslint-plugin-jsx-a11y": "2.0.1",
     "eslint-plugin-react": "6.0.0",
     "extract-text-webpack-plugin": "2.0.0-beta.3",
-    "fake-style-loader": "1.0.1",
     "file-loader": "0.9.0",
+    "flow-bin": "0.30.0",
     "json-loader": "0.5.4",
     "node-notifier": "4.6.0",
     "rimraf": "2.5.4",
@@ -73,6 +78,7 @@
     "webpack": "2.1.0-beta.20",
     "webpack-dev-middleware": "1.6.1",
     "webpack-hot-middleware": "2.12.2",
+    "webpack-md5-hash": "0.0.5",
     "webpack-node-externals": "1.3.3"
   }
 }
