--- a/.env_example
+++ b/.env_example
@@ -3,9 +3,9 @@
 # via your CI server for example.
 
 # NOTE!
-# Any keys added here must also be added to the DefinePlugin in the
-# webpackConfigFactory as we bundle both the client and server source with the
-# environment variables baked in.
+# These keys will be used by the webpack configFactory. Specifically webpack
+# parses the code and will replace any "process.env.{VAR_NAME}" instances with
+# the matching value from your vars below.
 
 # The port on which to run our server.
 SERVER_PORT=1337
@@ -16,18 +16,15 @@ CLIENT_DEVSERVER_PORT=7331
 # Disable SSR?
 DISABLE_SSR=false
 
-# Where should we output our server bundle? (relative to project root)
-SERVER_BUNDLE_OUTPUT_PATH=./build/server
-
-# Where should we output our client bundle? (relative to project root)
-CLIENT_BUNDLE_OUTPUT_PATH=./build/client
+# Where should we output our bundles? (relative to project root)
+BUNDLE_OUTPUT_PATH=./build
 
 # What should we name the file that contains details of all the files contained
-# within our client bundle?
-CLIENT_BUNDLE_ASSETS_FILENAME=assets.json
+# within our bundles?
+BUNDLE_ASSETS_FILENAME=assets.json
 
 # What is the public http path at which we will serve our client bundle from?
-CLIENT_BUNDLE_HTTP_PATH=/client-assets/
+CLIENT_BUNDLE_HTTP_PATH=/client/
 
 # How long should we set the browser cache for the client bundle assets?  Don't
 # worry, we add hashes to the files, so if they change the new files will be
