--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
   "name": "react-universally-skinny",
-  "version": "3.1.0",
+  "version": "4.0.0",
   "description": "A \"when size matters\" adaptation of the react-universally starter kit.",
   "main": "build/server/main.js",
   "engines": {
-    "node": "~6.3.1"
+    "node": "~6.6.0"
   },
   "scripts": {
+    "typecheck": "flow",
     "lint": "eslint src",
     "clean": "rimraf build",
-    "development": "node ./tools/development/server",
-    "build": "npm run clean && webpack --env.mode production --config ./tools/webpack/client.config.js && webpack --env.mode production --config ./tools/webpack/server.config.js",
-    "start": "node build/server/main.js"
+    "development": "node ./tools/development",
+    "build": "npm run clean && webpack --config ./tools/webpack/client.config.js && webpack --config ./tools/webpack/universalMiddleware.config.js && webpack --config ./tools/webpack/server.config.js",
+    "start": "node build/server"
   },
   "repository": {
     "type": "git",
@@ -34,51 +35,51 @@
   },
   "homepage": "https://github.com/ctrlplusb/react-universally#readme",
   "dependencies": {
-    "app-root-path": "1.3.0",
+    "app-root-path": "2.0.1",
     "compression": "1.6.2",
     "express": "4.14.0",
-    "helmet": "2.1.2",
+    "helmet": "2.2.0",
     "hpp": "0.2.1",
     "normalize.css": "4.2.0",
     "path": "0.12.7",
     "preact": "5.6.0",
     "preact-compat": "2.3.0",
     "react-helmet": "3.1.0",
-    "react-router": "3.0.0-alpha.3",
+    "react-router": "2.8.1",
     "serialize-javascript": "1.3.0",
-    "source-map-support": "0.4.2"
+    "source-map-support": "0.4.3"
   },
   "devDependencies": {
     "assets-webpack-plugin": "3.4.0",
-    "babel-cli": "6.11.4",
-    "babel-core": "6.13.2",
-    "babel-eslint": "6.1.2",
-    "babel-loader": "6.2.4",
-    "babel-plugin-transform-class-properties": "6.11.5",
-    "babel-plugin-transform-object-rest-spread": "6.8.0",
-    "babel-preset-es2015": "6.13.2",
-    "babel-preset-react": "6.11.1",
+    "babel-cli": "6.16.0",
+    "babel-core": "6.16.0",
+    "babel-eslint": "7.0.0",
+    "babel-loader": "6.2.5",
+    "babel-polyfill": "6.16.0",
+    "babel-preset-latest": "6.16.0",
+    "babel-preset-react": "6.16.0",
     "chokidar": "1.6.0",
-    "css-loader": "0.23.1",
+    "colors": "1.1.2",
+    "css-loader": "0.25.0",
     "dotenv": "2.0.0",
-    "eslint": "3.2.2",
-    "eslint-config-airbnb": "10.0.0",
+    "eslint": "3.6.1",
+    "eslint-config-airbnb": "12.0.0",
     "eslint-plugin-flow-vars": "0.5.0",
-    "eslint-plugin-import": "1.12.0",
-    "eslint-plugin-jsx-a11y": "2.0.1",
-    "eslint-plugin-react": "6.0.0",
-    "extract-text-webpack-plugin": "2.0.0-beta.3",
+    "eslint-plugin-import": "2.0.0",
+    "eslint-plugin-jsx-a11y": "2.2.2",
+    "eslint-plugin-react": "6.3.0",
+    "extract-text-webpack-plugin": "2.0.0-beta.4",
     "file-loader": "0.9.0",
-    "flow-bin": "0.30.0",
+    "flow-bin": "0.32.0",
     "json-loader": "0.5.4",
-    "node-notifier": "4.6.0",
+    "node-notifier": "4.6.1",
     "rimraf": "2.5.4",
     "style-loader": "0.13.1",
     "url-loader": "0.5.7",
-    "webpack": "2.1.0-beta.20",
-    "webpack-dev-middleware": "1.6.1",
+    "webpack": "2.1.0-beta.25",
+    "webpack-dev-middleware": "1.8.3",
     "webpack-hot-middleware": "2.12.2",
     "webpack-md5-hash": "0.0.5",
-    "webpack-node-externals": "1.3.3"
+    "webpack-node-externals": "1.4.3"
   }
 }
