Replaces babel-polyfill with polyfill.io cdn and the facebook regenerator-runtime lib.

--- a/package.json
+++ b/package.json
@@ -55,7 +55,6 @@
     "babel-core": "6.16.0",
     "babel-eslint": "7.0.0",
     "babel-loader": "6.2.5",
-    "babel-polyfill": "6.16.0",
     "babel-preset-latest": "6.16.0",
     "babel-preset-react": "6.16.0",
     "chokidar": "1.6.0",
@@ -73,6 +72,7 @@
     "flow-bin": "0.32.0",
     "json-loader": "0.5.4",
     "node-notifier": "4.6.1",
+    "regenerator-runtime": "0.9.5",
     "rimraf": "2.5.4",
     "style-loader": "0.13.1",
     "url-loader": "0.5.7",
